# pokemon-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  MVP.md  Makefile  README.md  main.py  pyproject.toml
agents/: agent_gemini.py  agent_qtable.py  agent_simple_heuristic.py  agent_unga_bunga.py  pokemon_calculator.py
cli/: accept_battles.py  cross_evaluate.py  search_battles.py  utils.py
examples/: agent_chatgpt.py  agent_max_damage.py  agent_zai.py
gui/: __main__.py  app.py  index.html
outputs/: metrics.json
outputs/models/: training_log.json
report/: ieee_report.md  ieee_report.typ  references.bib  script_complete.md  script_slides.md  script_summary.md
src/: 00_setup.py  01_download.py  02_preprocess.py  03_clustering.py  04_classification.py  05_train_agent.py  06_dashboard.py  07_report_figures.py  08_report.py
